# PalworldSaveTools

./: .gitignore  Menu.cmd  Menu.py  README.md  build.cmd  build.py  menu.cmd  menu.py  pyproject.toml  readme.md  requirements.txt  setup.py  setup_freeze.py
Assets/: all_in_one_deletion.py  base_transfer.py  bases.py  character_transfer.py  common.py  convert.py  convert_level_location_finder.py  convert_players_location_finder.py  convertids.py  coords.py  delete_bases.py  delete_inactive_players.py  delete_pals_save.py  delete_players_guilds.py  fix_host_save.py  fix_host_save_manual.py  game_pass_save_fix.py  import_libs.py  modify_save.py  pal_names.py  pal_passives.py  paldefender_bases.py  palobject.py  palworld_save_pal.py  restore_map.py  scan_save.py  slot_injector.py  xgp_save_extract.py
Assets/palworld_save_tools/: palsav.py
Assets/palworld_save_tools/commands/: convert.py
Assets/palworld_save_tools/rawdata/: work.py
Assets/palworld_xgp_import/: __init__.py
Assets/palworld_xpg_import/: main.py
Build Exe/: build_exe.cmd  build_exe.py  setup.py
PalworldSave/Players/: 2F2CA634000000000000000000000000.sav  4E6DACB6000000000000000000000000.sav  910CC8A7000000000000000000000000.sav
